# CloudAI_school

./: .gitignore  README.md  hello.txt  main.py  pyproject.toml
.claude/: settings.local.json
11주차/: INVOICE_AGENT_FEATURES.md  INVOICE_AGENT_PLAN.md  INVOICE_AGENT_PROGRESS.md  invoice_agent.py  invoices.json  purchasing_rules.txt
12주차/: customer_service.py
13주차/: CS_AGENT_PLAN.md  customer_service_cli.py
4주차/: README.md  namuwiki_file_agent.py  zelda_info.txt
5주차/: README.md  index.html  style.css
